--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,8 @@
     <string name="taskfail">Unable to complete command.</string>
     <string name="progress_runningcommand">Running command</string>
     <string name="progress_pleasewait">Please wait</string>
-    <string name="filetransfer">File transfer</string>
+    <string name="filetransfer_sftp">SFTP</string>
+    <string name="filetransfer_scp">SCP</string>
     <string name="up">Up</string>
     <string name="retrieve_remote_files">Retrieving remote file list</string>
     <string name="insertallvalues">Please fill in username, hostname and password values.</string>
